--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "redux-thunk": "^2.4.0",
     "sass": "^1.43.2",
     "sweetalert2": "^11.1.9",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "eslint-config-prettier": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,7 +43,6 @@
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
     "eslint": "7.11.0",
-    "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
