--- a/package.json
+++ b/package.json
@@ -6,20 +6,19 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "eslint-config-prettier": "^8.3.0",
     "firebase": "^9.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-usemodal": "^1.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
     "sass": "^1.43.2",
+    "standard": "^16.0.4",
     "sweetalert2": "^11.1.9",
-    "web-vitals": "^1.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "standard": "^16.0.4"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
